# AeroDue

./: .gitignore  AGENTS.md  README.md
.github/: FUNDING.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_stat_claim.xml  splash_logo.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/core/: build.gradle.kts
android/gradle/: libs.versions.toml
android/llm/: README.md  build.gradle.kts
backend/: README.md  pyproject.toml
backend/aerodue/: __init__.py  cli.py  mobile.py
backend/aerodue/core/: __init__.py
backend/aerodue/core/compensation/: __init__.py  engine.py
backend/aerodue/core/flight/: __init__.py  matcher.py
backend/aerodue/core/location/: __init__.py  gps.py
backend/aerodue/core/regulations/: __init__.py  dot.py  eu261.py
backend/aerodue/data/regulations/: dot_refund_cancel.yaml
backend/aerodue/domain/: __init__.py  claim.py  coverage.py  disruption.py  flight.py
backend/aerodue/inference/: __init__.py  models.yaml  rationale.py
backend/samples/: delayed_connection.json
backend/tests/: test_compensation.py
docs/: ARCHITECTURE.md  COMPENSATION_RULES.md  MCP.md  PITCH.md  flow.html  index.html  tech.html
scripts/: build-litertlm.sh  configure-pixel-dev.sh  download-models.sh  push-model-to-device.sh  setup-android-env.sh  verify-android-env.sh
(+51 files in other folders)
